# collectibles-ai-appraiser

./: .gitignore  README.md  app.py  card_analyzer.py  clear_db.py  config.yaml.example  pyproject.toml  test.py
functions/: web_search.py
output/: pokemon_cards_2024-12-30.xlsx
utils/: retry.py
