[project]
name = "poke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "docling>=2.10.0",
    "duckduckgo-search>=7.1.1",
    "ebaysdk>=2.2.0",
    "instructor>=1.7.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "openai>=1.57.2",
    "pandas>=2.2.3",
    "pdfminer-six>=20240706",
    "pillow>=10.4.0",
    "plotly>=5.24.1",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "streamlit>=1.41.1",
]
